insert all marchieparty content

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,98 +1,97 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* mixins, variables, etc. */
+@font-face {
+    font-family: 'Futura Heavy';
+    src: url('futuraheavy.ttf') format('truetype');
+    src: url('futuraheavy-webfont.woff2') format('woff2'),
+         url('futuraheavy-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
-$gray-medium-light: #eaeaea;
+@font-face {
+    font-family: 'Futura Light';
+    src: url('futuraLight-webfont.woff2') format('woff2'),
+         url('futuraLight-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
-/* universal */
+.navsmall {
+    height: 5%;
+    line-height: 0px;
+}
 
 body {
-  padding-top: 60px;
+    font-family: 'Futura Light';
+    font-size: 150%;
 }
 
-section {
-  overflow: auto;
+.customNavBar {
+    font-family: 'Futura Heavy';
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
+    background-image: image_url("parkcityCropShort.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top left;
+    padding-top: 100px;
 }
 
-textarea {
-  resize: vertical;
+.navbar-default .navbar-nav > li > a {
+	color: white;
 }
 
-.center {
-  text-align: center;
-  h1 {
-    margin-bottom: 10px;
-  }
+.navbar-default .navbar-brand {
+	color: white;
+    font-size: 155%;
+    border: none;
 }
 
-/* typography */
-
-h1, h2, h3, h4, h5, h6 {
-  line-height: 1;
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
 }
 
-h1 {
-  font-size: 3em;
-  letter-spacing: -2px;
-  margin-bottom: 30px;
-  text-align: center;
+.bottomAlign {
+    padding-top: 20px;
+    padding-bottom: 0px;
+    vertical-align: bottom;
 }
 
-h2 {
-  font-size: 1.2em;
-  letter-spacing: -1px;
-  margin-bottom: 30px;
-  text-align: center;
-  font-weight: normal;
-  color: $gray-light;
-}
-
-p {
-  font-size: 1.1em;
-  line-height: 1.7em;
-}
-
-
-/* header */
-
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
+.navbar-nav > li > a {
+  padding-bottom: 0px;
+  vertical-align: bottom;
   color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  &:hover {
-    color: white;
-    text-decoration: none;
-  }
 }
 
-/* footer */
+.navbar-default > li > a {
+    color: white;
+}
 
-footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid $gray-medium-light;
-  color: $gray-light;
-  a {
-    color: $gray;
-    &:hover {
-      color: $gray-darker;
+.singlespace {
+        line-height: 50%;
+}
+
+.navbarDisappear {
+    line-height: 15px;
+}
+
+@media (min-width: 300px) {
+    .customNavBar {
+        padding-top: 20px;
     }
-  }
-  small {
-    float: left;
-  }
-  ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 15px;
+}
+
+
+@media (min-width: 767px) {
+    .navbarDisappear {
+      display: none;
     }
-  }
+}
+
+
+@media (min-width: 930px) {
+      .navbarDisappear {
+        display: inherit;
+    }
 }
