--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Contact") %>
-<h1>Contact</h1>
-<p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/contact">contact page</a>.
+<h3>Questions/Contacts</h3>
+<p class="lead">
+    If you have any questions between now and the wedding day, contact Maile at <a href="mailto:maile.martinez@gmail.com">maile.martinez@gmail.com</a> or call or text 206-962-1171.
 </p>
+<p>Our gracious hostess and all-around wonderful person, Marion Boland, is excited to answer any questions about Park City – what to do, where to stay, etc. She is a true Park City local and knows everything and everyone.
+You can reach her at <a href="mailto:marionboland67@gmail.com">marionboland67@gmail.com</a> or call or text 435-901-8031.</p>
