--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,8 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+<h3>Welcome!</h3>
+<p class="lead">We are so excited to gather in Park City with you to celebrate our wedding!</p>
+<p class="lead">The main event is:</p>
+<p class="lead">September 9, 2017, at 2:00pm.</p>
+<p class="lead">2802 Silver Cloud Dr, Park City, Utah 84060</p>
+<div class="map" id="map">
+    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCntHXOONf1ITETKw8DdtGgzZOIrFEelnw&q=2802+Silver+Cloud+Dr%2C+Park+City%2C+UT+84060&attribution_source=Marchie+Party&attribution_ios_deep_link_id=comgooglemaps://?daddr=2802+Silver+Cloud+Dr%2C+Park+City%2C+UT+84060&zoom=11&center=40.681907,-111.485753" width="100%" height="400" frameborder="0" style="border:0"></iframe>
 </div>
-
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
