--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" style="
+                <a class="navbar-brand" href="/" style="
                 padding-bottom: 0px;
                 padding-top: 44px;
                 letter-spacing: 0.2em;
